<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btAutenticar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btNaoSouCadastrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btEsqueciSenha"
        android:layout_alignBottom="@+id/btEsqueciSenha"
        android:layout_alignRight="@+id/btAutenticar"
        android:layout_marginRight="25dp"
        android:background="@null"
        android:drawablePadding="10dp"
        android:text="@string/bt_nao_sou_cadastrado"
        android:textColor="@color/vermelho"
        android:textSize="8sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btAutenticar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:text="@string/bt_autenticar"
        android:textColor="@color/preto"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText_login"
        android:layout_alignTop="@+id/btAutenticar"
        android:layout_marginRight="22dp"
        android:layout_marginTop="52dp"
        android:background="@null"
        android:drawablePadding="10dp"
        android:text="@string/bt_esqueci_minha_senha"
        android:textColor="@color/vermelho"
        android:textSize="8sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_password"
        android:layout_alignRight="@+id/lbl_usuario"
        android:text="@string/lbl_senha" />

    <TextView
        android:id="@+id/lbl_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_login"
        android:layout_alignLeft="@+id/editText_login"
        android:text="@string/lbl_usuario" />

    <EditText
        android:id="@+id/editText_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lbl_senha"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

</RelativeLayout>