<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layoutHeader"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="100dp"
	android:gravity="center"
	android:background="@color/cinza_c"
    >
	<com.google.android.apps.iosched.ui.widget.DashboardLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
	>
		<Button
			android:id="@+id/btFornecedores"
			android:text="@string/bt_fornecedores"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableTop="@drawable/btn_sobre"
			android:drawablePadding="10dp"
			android:background="@null"
			android:textStyle="bold"
			android:textColor="@color/preto"
		/>
		<Button
			android:id="@+id/btItens"
			android:text="@string/bt_itens"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableTop="@drawable/btn_sobre"
			android:drawablePadding="10dp"
			android:background="@null"
			android:textStyle="bold"
			android:textColor="@color/preto"
		/>

		<Button
		    android:id="@+id/btBandeja"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@null"
		    android:drawablePadding="10dp"
		    android:drawableTop="@drawable/btn_sobre"
		    android:onClick="metodozinho"
		    android:text="@string/menu_bandeja"
		    android:textColor="@color/preto"
		    android:textStyle="bold" />
		
	</com.google.android.apps.iosched.ui.widget.DashboardLayout>
</LinearLayout>