<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:layout_gravity="left|center_vertical"
>
	<!-- Layout com Imagem do Fornecedor, Nome e Descrição -->
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
	    android:paddingTop="2dp"
	    android:paddingBottom="2dp"
	    android:minHeight="40dp"
	    android:layout_marginRight="12dp"
	>
		<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		>
			<!-- Imagem do Item -->
			<ImageView android:id="@+id/img"
				android:layout_width="100dp"
				android:layout_height="50dp" 
				android:src="@drawable/ic_launcher"
				android:layout_gravity="center|center_vertical"
			/>
			<!-- Barra de progresso enquanto carrega a imagem -->
			<ProgressBar
				android:id="@+id/progress"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_gravity="center|center_vertical"
				android:gravity="center|center_vertical"
				android:layout_marginRight="6dp"
				style="@android:style/Widget.ProgressBar.Small"
			/>
		</FrameLayout>
		<LinearLayout
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginRight="5dp"
			android:orientation="vertical"
			android:layout_marginLeft="1dp"
		>
			<!-- Nome do Item -->
			<TextView
				android:id="@+id/tNome"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:textColor="@color/preto"
				android:text="@string/nome"
				style="@style/texto14Negrito"
			/>
			
           <TextView android:id="@+id/tDesc"
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:maxLines="4" 
                  android:singleLine="false"                
                  android:text="@string/descricao" 
                  android:textColor="@color/azul"
                  style="@style/texto12"
                  
			/>
            	<TableLayout
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:orientation="horizontal"
				>
					<TableRow>

					<TextView
					    android:id="@+id/lblQuantidade"
					    style="@style/texto12Negrito"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/lbl_quantidade"
					    android:textColor="@color/preto" />
										
					<TextView
						android:id="@+id/tQuantidade"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" 
						android:textColor="@color/vermelho"
						android:text="0"
						style="@style/texto12"
					/>
										
					<TextView
						android:id="@+id/lblPreco"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" 
						android:textColor="@color/preto"
						android:text="@string/lbl_preco"
						style="@style/texto12Negrito"
					/>
										
					<TextView
						android:id="@+id/tPreco"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" 
						android:textColor="@color/vermelho"
						android:text="00,00"
						style="@style/texto12"
					/>

					<TextView
					    android:id="@+id/lblTotal"
					    style="@style/texto12Negrito"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/lbl_total"
					    android:textColor="@color/preto" />
		           
					<TextView
						android:id="@+id/tTotal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" 
						android:textColor="@color/vermelho"
						android:text="00,00"
						style="@style/texto12"
					/>		           
		            </TableRow>	
				</TableLayout>	
		</LinearLayout>

	</LinearLayout>
	<!-- Seta na Direita -->
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:layout_gravity="right|center_vertical"
	    android:gravity="right|center_vertical"
	>
		<ImageView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="right|center_vertical"
			android:gravity="right|center_vertical"
			android:src="@drawable/seta_direita"
			android:layout_marginRight="10dp" 
		/>
	</LinearLayout>
</FrameLayout>
